k8s/05-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collab-frontend
  namespace: syncedit
  labels:
    app: collab-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: collab-frontend
  template:
    metadata:
      labels:
        app: collab-frontend
    spec:
      containers:
        - name: frontend
          image: syncedit-frontend:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: collab-frontend
  namespace: syncedit
spec:
  selector:
    app: collab-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
