k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncedit
  namespace: syncedit
spec:
  ingressClassName: traefik
  rules:
    - host: syncedit.local
      http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: collab-backend
                port:
                  number: 5000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: collab-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: collab-frontend
                port:
                  number: 3000
